--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,6 @@
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
     <TextView android:text="Nothing" android:layout_width="wrap_content"
-        android:layout_height="raymond" />
+        android:layout_height="arlee" />
 
 </RelativeLayout>
