--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,45 +16,58 @@
         </TableRow><TableRow>
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="35dp"
+        android:layout_height="wrap_content"
         android:text="Login ID"
-        android:gravity="center"
+        android:gravity="right"
         android:layout_margin="5dp"
         android:layout_below="@id/tv_titleBar"
         android:id="@+id/tv_loginID"
         android:layout_column="0"/>
     <EditText
         android:id="@+id/et_loginID"
+        android:maxLength="12"
         android:layout_width="250dp"
-        android:layout_height="35dp"
+        android:layout_height="wrap_content"
         android:hint="user id"
         android:layout_toRightOf="@id/tv_loginID"
         android:layout_below="@id/tv_titleBar"
         android:layout_margin="5dp"
         android:layout_column="1"
-        />
-    </TableRow>
+        android:maxLines="1"
+        android:longClickable="false" />
+    </TableRow>14141414
     <TableRow>
     <TextView
         android:layout_width="wrap_content"
         android:layout_column="0"
-        android:layout_height="35dp"
+        android:layout_height="wrap_content"
         android:text="Password"
-        android:gravity="center"
+        android:gravity="right"
         android:layout_margin="5dp"
         android:layout_below="@id/tv_loginID"
         android:id="@+id/tv_password"/>
     <EditText
         android:id="@+id/et_password"
         android:layout_width="250dp"
-        android:layout_height="35dp"
+        android:layout_height="wrap_content"
         android:layout_column="1"
+        android:maxLength="12"
         android:hint="password"
         android:layout_toRightOf="@id/tv_password"
         android:layout_below="@id/tv_loginID"
         android:layout_margin="5dp"
-        />
+        android:maxLines="1"
+        android:password="true" />
     </TableRow>
+    <TableRow>
+        <TextView
+            android:text="Please login"
+            android:layout_span="2"
+            android:id="@+id/message"
+            android:layout_margin="5dp"
+            android:gravity="right"/>
+    </TableRow>
+
         <TableRow>
             <Button android:layout_column="1" android:layout_gravity="right"
                 android:onClick="btn_login_click"
