--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,81 +1,100 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="com.tyict.ptms.Login"
-    android:gravity="center">
+    tools:context="com.tyict.ptms.Login">
+
     <TableLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
-        <TableRow>
-    <TextView android:text="@string/title_activity_login"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/tv_titleBar"/>
-        </TableRow><TableRow>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Login ID"
-        android:gravity="right"
-        android:layout_margin="5dp"
-        android:layout_below="@id/tv_titleBar"
-        android:id="@+id/tv_loginID"
-        android:layout_column="0"/>
-    <EditText
-        android:id="@+id/et_loginID"
-        android:maxLength="12"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:hint="user id"
-        android:layout_toRightOf="@id/tv_loginID"
-        android:layout_below="@id/tv_titleBar"
-        android:layout_margin="5dp"
-        android:layout_column="1"
-        android:maxLines="1"
-        android:longClickable="false" />
-    </TableRow>14141414
-    <TableRow>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_column="0"
-        android:layout_height="wrap_content"
-        android:text="Password"
-        android:gravity="right"
-        android:layout_margin="5dp"
-        android:layout_below="@id/tv_loginID"
-        android:id="@+id/tv_password"/>
-    <EditText
-        android:id="@+id/et_password"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_column="1"
-        android:maxLength="12"
-        android:hint="password"
-        android:layout_toRightOf="@id/tv_password"
-        android:layout_below="@id/tv_loginID"
-        android:layout_margin="5dp"
-        android:maxLines="1"
-        android:password="true" />
-    </TableRow>
-    <TableRow>
-        <TextView
-            android:text="Please login"
-            android:layout_span="2"
-            android:id="@+id/message"
-            android:layout_margin="5dp"
-            android:gravity="right"/>
-    </TableRow>
 
         <TableRow>
-            <Button android:layout_column="1" android:layout_gravity="right"
-                android:onClick="btn_login_click"
+
+            <TextView
+                android:id="@+id/tv_titleBar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Login"
+                android:text="@string/title_activity_login" />
+        </TableRow>
+
+        <TableRow>
+
+            <TextView
+                android:id="@+id/tv_loginID"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tv_titleBar"
+                android:layout_column="0"
+                android:layout_margin="5dp"
+                android:gravity="right"
+                android:text="Login ID" />
+
+            <EditText
+                android:id="@+id/et_loginID"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tv_titleBar"
+                android:layout_column="1"
+                android:layout_margin="5dp"
+                android:layout_toRightOf="@id/tv_loginID"
+                android:hint="user id"
+                android:longClickable="false"
+                android:maxLength="12"
+                android:maxLines="1" />
+        </TableRow>
+
+        <TableRow>
+
+            <TextView
+                android:id="@+id/tv_password"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tv_loginID"
+                android:layout_column="0"
+                android:layout_margin="5dp"
+                android:gravity="right"
+                android:text="Password" />
+
+            <EditText
+                android:id="@+id/et_password"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tv_loginID"
+                android:layout_column="1"
+                android:layout_margin="5dp"
+                android:layout_toRightOf="@id/tv_password"
+                android:hint="password"
+                android:maxLength="12"
+                android:maxLines="1"
+                android:password="true" />
+        </TableRow>
+
+        <TableRow>
+
+            <TextView
+                android:id="@+id/message"
+                android:layout_margin="5dp"
+                android:layout_span="2"
+                android:gravity="right"
+                android:text="Please login" />
+        </TableRow>
+
+        <TableRow>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="1"
+                android:layout_gravity="right"
+                android:onClick="btn_login_click"
                 android:paddingLeft="30dp"
-                android:paddingRight="30dp"/>
+                android:paddingRight="30dp"
+                android:text="Login" />
         </TableRow>
     </TableLayout>
 </RelativeLayout>
