--- a/app/src/main/res/layout/activity_raymond_test.xml
+++ b/app/src/main/res/layout/activity_raymond_test.xml
@@ -1,4 +1,15 @@
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/fragment"
-    android:name="com.tyict.ptms.MainFragment" tools:layout="@layout/fragment_main"
-    android:layout_width="match_parent" android:layout_height="match_parent" />
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="com.tyict.ptms.RaymondTest">
+
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/fm_content">
+
+
+    </FrameLayout>
+
+</RelativeLayout>
