--- a/app/src/main/res/layout/joblist_layout.xml
+++ b/app/src/main/res/layout/joblist_layout.xml
@@ -21,5 +21,9 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@id/tvTable" />
+    <TextView
+        android:id="@+id/tvShow"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" />
 
 </RelativeLayout>
