--- a/app/src/main/res/layout/activity_raymond_test.xml
+++ b/app/src/main/res/layout/activity_raymond_test.xml
@@ -7,9 +7,6 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/fm_content">
-
-
-    </FrameLayout>
+        android:id="@+id/fm_content" />
 
 </RelativeLayout>
