--- a/app/src/main/res/layout/listview_item.xml
+++ b/app/src/main/res/layout/listview_item.xml
@@ -6,19 +6,19 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/tvJobID"
+        android:id="@+id/tvJobNo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="5dp"
-        android:text="JobID"/>
+        android:text="JobNo"/>
 
     <TextView
         android:id="@+id/tvJobProblem"
         android:text="JobProblem"
         android:layout_marginLeft="10dp"
-        android:textSize="30dp"
-        android:layout_below="@+id/tvJobID"
+        android:textSize="20dp"
+        android:layout_below="@+id/tvJobNo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
