added pull down refresh function in joblist

--- a/app/src/main/res/layout/joblist_layout.xml
+++ b/app/src/main/res/layout/joblist_layout.xml
@@ -3,12 +3,17 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <ListView
-        android:id="@+id/lvJobList"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        />
+    <com.tyict.ptms.RefreshableView
+        android:id="@+id/refreshable_view"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
 
+        <ListView
+            android:id="@+id/lvJobList"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+    </com.tyict.ptms.RefreshableView>
 </LinearLayout>
