--- a/app/src/main/res/layout/jobdetail_layout.xml
+++ b/app/src/main/res/layout/jobdetail_layout.xml
@@ -2,6 +2,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
+
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -60,8 +61,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="left"
+                android:layout_marginLeft="10dp"
                 android:text="xxxx"
-                android:textSize="20dp" />
+                android:textSize="16dp" />
         </LinearLayout>
 
         <TextView
@@ -78,8 +80,8 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Status :"
                 android:layout_weight="5"
+                android:text="Status :"
                 android:textSize="23dp" />
 
             <Spinner
@@ -107,6 +109,7 @@
                 android:textSize="23dp" />
 
             <TextView
+                android:id="@+id/jobDetail_serialNo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="right"
@@ -115,7 +118,7 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/jobDetail_serialNo"
+
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:background="#AAA" />
@@ -124,9 +127,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:textSize="30dp"
             android:gravity="center"
-            android:text="Date/Time"/>
+            android:text="Date/Time"
+            android:textSize="30dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -163,7 +166,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="visit Date :"
+                android:text="Visit Date :"
                 android:textSize="23dp" />
 
             <TextView
@@ -239,24 +242,24 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:textSize="30dp"
             android:gravity="center"
-            android:text="Other"/>
+            android:text="Other"
+            android:textSize="30dp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Remark :"
-            android:textSize="23dp"/>
+            android:textSize="23dp" />
 
         <EditText
             android:id="@+id/jobDetail_remark"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="20dp"
-            android:text="Nothing"
             android:layout_marginBottom="30dp"
-            android:gravity="start" />
+            android:gravity="start"
+            android:text="Nothing"
+            android:textSize="16dp" />
 
     </LinearLayout>
 
