--- a/app/src/main/res/layout/joblist_layout.xml
+++ b/app/src/main/res/layout/joblist_layout.xml
@@ -6,7 +6,7 @@
     <com.tyict.ptms.RefreshableView
         android:id="@+id/refreshable_view"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
+        android:layout_height="wrap_content">
 
         <ListView
             android:id="@+id/lvJobList"
