--- a/app/src/main/res/layout/listview_item.xml
+++ b/app/src/main/res/layout/listview_item.xml
@@ -3,15 +3,25 @@
     android:layout_width="match_parent"
     android:gravity="center_vertical"
     android:layout_margin="5dp"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:clickable="false"
+    android:focusable="false"
+    android:descendantFocusability="blocksDescendants">
+
+    <TextView
+        android:id="@+id/lblJobNo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="5dp"
+        android:text="JobNo:"/>
 
     <TextView
         android:id="@+id/tvJobNo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="5dp"
-        android:text="JobNo"/>
+        android:layout_toRightOf="@id/lblJobNo"
+        android:text="xxxx"/>
 
     <TextView
         android:id="@+id/tvJobProblem"
