--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,7 +19,8 @@
                 android:id="@+id/tv_titleBar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/title_activity_login" />
+                android:text="@string/title_activity_login"
+                android:layout_weight="1"/>
         </TableRow>
 
         <TableRow>
