--- a/app/src/main/res/layout/fragment_view_all.xml
+++ b/app/src/main/res/layout/fragment_view_all.xml
@@ -2,15 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/viewAllData_layout"
     android:background="#FFBB00">
 
     <Spinner
         android:id="@+id/spn_tableSelection"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"></Spinner>
+        android:layout_height="120dp"></Spinner>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/db_result"/>
+
 </LinearLayout>
