--- a/app/src/main/res/layout/joblist_layout.xml
+++ b/app/src/main/res/layout/joblist_layout.xml
@@ -10,7 +10,7 @@
 
         <ListView
             android:id="@+id/lvJobList"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
