--- a/app/src/main/res/layout/listview_item.xml
+++ b/app/src/main/res/layout/listview_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:gravity="center_vertical"
     android:layout_margin="5dp"
@@ -8,20 +8,46 @@
     android:focusable="false"
     android:descendantFocusability="blocksDescendants">
 
-    <TextView
-        android:id="@+id/lblJobNo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="5dp"
-        android:text="JobNo:"/>
 
-    <TextView
-        android:id="@+id/tvJobNo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/lblJobNo"
-        android:text="xxxx"/>
+    <TableRow>
+        <TextView
+            android:id="@+id/lblJobNo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:text="No: " android:layout_column="0"/>
+
+        <TextView
+            android:id="@+id/tvJobNo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="999"
+         android:layout_column="1"/>
+
+        <LinearLayout android:gravity="right"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content">
+
+
+        <TextView
+            android:id="@+id/Status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Status "
+            />
+
+        <TextView
+            android:id="@+id/tvJobStatus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="JobStatus"
+            android:maxWidth="100dp"
+            android:minWidth="100dp"/>
+        </LinearLayout>
+    </TableRow>
+
+
 
     <TextView
         android:id="@+id/tvJobProblem"
@@ -41,21 +67,5 @@
         android:layout_alignParentRight="true"
         android:text="JobStartDataTime"/>
 
-    <TextView
-        android:id="@+id/Status"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tvJobProblem"
-        android:layout_marginLeft="5dp"
-        android:layout_alignParentLeft="true"
-        android:text="Status:"/>
 
-    <TextView
-        android:id="@+id/tvJobStatus"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tvJobProblem"
-        android:layout_toRightOf="@+id/Status"
-        android:text="JobStatus"/>
-
-</RelativeLayout>
+</TableLayout>
