--- a/app/src/main/res/layout/jobdetail_layout.xml
+++ b/app/src/main/res/layout/jobdetail_layout.xml
@@ -59,17 +59,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="left"
-                android:editable="true"
                 android:layout_marginLeft="10dp"
                 android:text="xxxx"
                 android:textSize="16dp" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textStyle="italic"
-                android:textSize="10dp"
-                android:text="##Long Click to edit"
-                android:layout_gravity="right" />
         </LinearLayout>
 
         <TextView
@@ -258,7 +250,7 @@
             android:text="Remark :"
             android:textSize="23dp" />
 
-        <TextView
+        <EditText
             android:id="@+id/jobDetail_remark"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -266,13 +258,7 @@
             android:gravity="start"
             android:text="Nothing"
             android:textSize="16dp" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="##Long Click to edit"
-            android:layout_gravity="right"
-            android:textSize="10dp"
-            android:textStyle="italic"/>
+
     </LinearLayout>
 
 </ScrollView>
