--- a/app/src/main/res/drawable/btn_shape_normal.xml
+++ b/app/src/main/res/drawable/btn_shape_normal.xml
@@ -3,7 +3,10 @@
     <corners android:radius="10dp" />
 
     <stroke
-        android:width="5dp"
+        android:width="2dp"
         android:color="#29B6F6" />
+
+    <solid android:color="@android:color/transparent"
+        />
 
 </shape>
