--- a/app/src/main/res/layout/jobdetail_layout.xml
+++ b/app/src/main/res/layout/jobdetail_layout.xml
@@ -323,11 +323,13 @@
             android:layout_height="wrap_content">
 
             <Button
+                android:id="@+id/btn_photo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:layout_margin="5dp"
                 android:background="@drawable/styled_button"
+                android:text="Add Photo"
                 android:textColor="@drawable/styled_text"/>
             <Button
                 android:layout_width="wrap_content"
@@ -335,23 +337,20 @@
                 android:layout_weight="1"
                 android:layout_margin="5dp"
                 android:background="@drawable/styled_button"
-                android:textColor="@drawable/styled_text"/>
+                android:textColor="@drawable/styled_text"
+                android:text="Open Light"/>
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:text="Start Job"
                 android:layout_margin="5dp"
                 android:background="@drawable/styled_button"
-                android:textColor="@drawable/styled_text"/>
+                android:textColor="@drawable/styled_text"
+                android:layout_weight="1"
+               />
+
         </LinearLayout>
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Start"
-            android:background="@drawable/styled_button"
-            android:textColor="@drawable/styled_text"
-            android:textSize="30dp"
-            android:layout_margin="10dp"/>
+
     </LinearLayout>
 
 </ScrollView>
