successful insert service job

--- a/app/src/main/res/layout/find_serialno_dialog_layout.xml
+++ b/app/src/main/res/layout/find_serialno_dialog_layout.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/newServiceJob_find_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/newServiceJob_find_layout"
     android:orientation="vertical">
 
     <LinearLayout
@@ -11,55 +11,44 @@
         android:layout_margin="20dp"
         android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:orientation="horizontal">
+            android:layout_marginBottom="5dp"
+            android:text="Company Name : "
+            android:textSize="16dp" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Company Name : "
-                android:textSize="16dp" />
-
-            <Spinner
-                android:id="@+id/findDialog_comName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:minWidth="1in"
-                android:textSize="16dp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
+        <Spinner
+            android:id="@+id/findDialog_comName"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:orientation="horizontal">
+            android:minWidth="1in"
+            android:textSize="16dp" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Product Name : "
-                android:textSize="16dp" />
 
-            <Spinner
-                android:id="@+id/findDialog_prodName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:minWidth="1in"
-                android:textSize="16dp" />
-        </LinearLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:text="Product Name : "
+            android:textSize="16dp" />
+
+        <Spinner
+            android:id="@+id/findDialog_prodName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minWidth="1in"
+            android:textSize="16dp" />
 
 
         <Button
             android:id="@+id/findDialog_submit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_margin="10dp"
             android:minWidth="200dp"
-            android:layout_gravity="center"
-            android:text="Submit"/>
+            android:text="Submit" />
     </LinearLayout>
 
 
