--- a/app/src/main/res/layout/jobdetail_layout.xml
+++ b/app/src/main/res/layout/jobdetail_layout.xml
@@ -104,14 +104,6 @@
             android:layout_margin="7dp"
             android:orientation="vertical">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textStyle="italic"
-                android:textSize="10dp"
-                android:text="##Long Click to edit"
-                android:layout_gravity="right"
-                />
         </LinearLayout>
 
 
@@ -181,7 +173,14 @@
             android:layout_margin="5dp"
             android:minLines="5"
             />
-
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textStyle="italic"
+            android:textSize="10dp"
+            android:text="##Long Click to edit"
+            android:layout_gravity="right"
+            />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -302,6 +301,8 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="30dp"
             android:gravity="start"
+            android:hint="Add remark by long click"
+            android:minLines="5"
             android:text="Nothing"
             android:textSize="15dp" />
         <TextView
